# firv-core

./: .gitignore  Cargo.toml  README.md  firvcmd  rebuild_comp.sh
.cargo/: config.toml
src/: array.rs  basic_tests.rs  harden.rs  main.rs  mutable_side_effect.rs  res.rs
